# goit-pythonweb-hw-04

./: .gitignore  README.md  main.py  pyproject.toml
source/: data.json
source/sub/: Dockerfile2
